@@ -1,3 +1,8 @@
+2012-08-23  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tclBinary.c: [Bug 3496014] (Backport from Tcl 8.6) Protect
+	Tcl_SetByteArrayObj for invalid values.
+
 2012-08-20  Don Porter  <dgp@users.sourceforge.net>
 
 	* generic/tclPathObj.c:	[Bug 3559678] Fix bad filename normalization
